--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </section>
 <section class="result-analysis">
     <div class="results">
-        <img src="rstp/results.jpeg">
+        <img src="rstp/results.jpg">
     </div>
 </section>
 <section class="pictures">
