--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
   
 <div class="picture-row">
         <div class="picture2">
-            <img src="third/pic002.jpg">
+            <img src="third/pic002.JPG">
         </div>
         <div class="picture2">
-            <img src="third/pic003.jpg">
+            <img src="third/pic003.JPG">
         </div>
     </div>
 </section>
