--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   
 <div class="picture-row">
         <div class="picture2">
-            <img src="third/pic002.JPG">
+            <img src="third/pic002.jpg">
         </div>
         <div class="picture2">
             <img src="third/pic003.JPG">
