--- a/about us.html
+++ b/about us.html
@@ -139,7 +139,7 @@
                 <span class="icon"><i class="bi bi-geo-alt-fill"></i></span>
                 <span class="description">LOCATION</span>
             </a>
-            <a class="footer-link" href="BOM.html">
+            <a class="footer-link" href="bom.html">
                 <span class="icon"><i class="bi bi-people-fill"></i></span>
                 <span class="description">BOM</span>
            
