--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p>Chief Principal, Grace Macharia</p></div>
     </div>
     <div class="location-col">
-        <i class="bi bi-envelope"></i></i><div><a href="maryhillgirls@yahoo.com>"<h5>EMAIL</h5>
+        <i class="bi bi-envelope"></i></i><div><a href="maryhillgirls@yahoo.com"><h5>EMAIL</h5>
         <P>maryhillgirls@yahoo.com</P></a></div>
     </div> 
     
