--- a/index.html
+++ b/index.html
@@ -243,6 +243,12 @@
     navlink.style.right = "-200px";
  }
 </script>
+        <script>
+            function showButton(){
+                const navlink = document.querySelector(".nav-link");
+                if (navlink){navlink.style.diplay = 'block';}
+            }
+        </script>
 <script type="text/javascript">
     var counter=1;
     setInterval(function(){
