--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 </script>
         <script>
             function showButton(){
-                const navlink = document.querySelector(".nav-link");
-                if (navlink){navlink.style.diplay = 'block';}
+                const navlinks = document.querySelector(".nav-links");
+                if (navlinks){navlinks.style.diplay = 'block';}
             }
         </script>
 <script type="text/javascript">
