--- a/about us.html
+++ b/about us.html
@@ -147,9 +147,9 @@
         <div class="footer-links">
             <h2>FOLLOW US ON SOCIAL MEDIA</h2>
             <div class="social-link">
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-youtube"></i>
-                <i class="bi bi-instagram"></i>
+                <a href="https://www.facebook.com/profile.php?id=61574375701635&mibextid=ZbWKwL"> <i class="bi bi-facebook"></i></a>
+               <a href="https://youtube.com/@maryhillgirls-high?si=mcoPlJKB6UH6G0sf"> <i class="bi bi-youtube"></i></a>
+                <a href="https://www.instagram.com/olcmaryhillgirlshigh?igsh=YzljYTk1ODg3Zg=="> <i class="bi bi-instagram"></i></a>
             </div>
         </div>
     </div>
