--- a/index.html
+++ b/index.html
@@ -108,36 +108,42 @@
     </div>
     
 </section>
-<section class="school-values">
-    <div class="row">
-        <div class="school-col">
-            <h1>CORE VALUES</h1>
-                <ul>
-                    <li>TEAMWORK</li>
-                    <li>EFFICIENCY</li>
-                    <li>COMMITMENT</li>
-                    <li>DILIGENCE</li>
-                    <li>PROFESSIONALISM</li>
-                    <li>HONEST</li>
 
-                </ul>
-            </P>
-        </div>
-        <div CLASS="school-col">
-            <h1>SCHOOL ANTHEM</h1>
-            <p>Unsere maryhill our home<br> 
-            Determination is our goal<br>
-            Unsere maryhill our home<br>
-            forward ever backward never</p>
-            <p>Unsere maryhill our home<br>
-            United we are one<br>
-            Unsere marhill our home<br>
-            forward ever backward never</p>
-            </div>
-        </div>
-    </div>
-</section>
-
+          <section class="schooool-val">
+                <div class="row">
+                    <div class="containerrr">
+                        <img src="canvas/values.jpeg">
+                        <div class="schooool-col">
+                           <h3>CORE VALUES</h3>
+                            <p>
+                                <ul>
+                                    <li>TEAMWORK</li>
+                                    <li>EFFICIENCY</li>
+                                    <li>COMMITMENT</li>
+                                    <li>DILIGENCE</li>
+                                    <li>PROFESSIONALISM</li>
+                                    <li>HONEST</li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="containerrr-two">
+                        <img src="canvas/anthem.jpeg">
+                        <div class="schooool-coltwo">
+                            <h2>SCHOOL ANTHEM</h2>
+                            <P>Unsere maryhill our home<br>
+                            Determination is our goal<br>
+                        Unsere maryhill our home<br>
+                    Forward ever backward never</P>
+                    <P>Unsere maryhill our home<br>
+                    United we are one<br>
+                Unsere maryhill our home<br>
+            forward ever backward never</P>
+                            </div>
+                    </div>
+                   
+                </div>
+            </section> 
 <section class="club-socities">
     <h1>club and society</h1>
     <p>At Maryhill Girls High School, we believe in the power of community
