--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
     </div>
     
 </section>
-
-          <section class="schooool-val">
+ <section class="schooool-val">
                 <div class="row">
                     <div class="containerrr">
                         <img src="canvas/values.jpeg">
@@ -144,6 +143,7 @@
                    
                 </div>
             </section> 
+    </section>
 <section class="club-socities">
     <h1>club and society</h1>
     <p>At Maryhill Girls High School, we believe in the power of community
