--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <nav>
     <a href="#"> </a>
-        <img src="#">
+        <img src="redil/carmel.jfif">
         <div class="nav-links" id="navlink">
             <i class="bi bi-x" onclick="hidemenu()"></i>
             <ul>
