--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 <nav>
     
-        <img src="redil/carmel.jfif">
+        <img src="redil/carmel.j">
         <div class="nav-links" id="navlink">
             <i class="bi bi-x" onclick="hidemenu()"></i>
             <ul>
