--- a/location.html
+++ b/location.html
@@ -11,28 +11,28 @@
 </head>
     <body>
        
-<section class="location-header">
-<div class="sub-box">
-    <h1>LOCATION</h1>
-</div>
-<nav>
-    <a href="#"> </a>
-        <img src="#">
-        <div class="nav-links" id="navlink">
-            <i class="bi bi-x" onclick="hidemenu()"></i>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about us.html">ABOUT US</a></li>
-                <li><a href="location.html">LOCATION</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
-                <li><a href="bom.html">BOM</a></li>
 
-            </ul>
-        </div>
-       <i class="bi bi-list" onclick="showmenu()"></i>
-   
-</nav>
-</section>
+           <nav>
+            <img src="logoo/carmel.jfif">
+            <div class="nav-links" id="navlink">
+                <i class="bi bi-x" onclick="hidemenu()"></i>
+                <ul> 
+                   <li><a href="index.html">HOME</a></li>
+                   <li><a href="about us.html">ABOUT US</a></li>
+                   <li><a href="location.html">LOCATION</a></li>
+                   <li><a href="gallery.html">GALLERY</a></li>
+                   <li><a href="bom.html">BOM</a></li>
+                </ul>
+            </div>
+            <i class="bi bi-list" onclick="showmenu()"></i>
+        </nav>
+        <section class="hero">
+         <h1 class="anim"> MARYHILL GIRLS <br>HIGH SCHOOL<br></h1>
+            <p class="anim">SCHOOL MOTTO: <br>toil for excellence<br></p>
+            <button class="btn anim">SCROLL UP</button>
+<img src="PICTS/front1.jpg" class="log-pic anim">
+            
+        </section>
 <div class="location-row">
     <div class="location-col">
         <i class="bi bi-geo-alt-fill"></i><div><h5>LOCATION</h5>
