--- a/about us.html
+++ b/about us.html
@@ -159,14 +159,14 @@
     <div class="copy-statement"><h1>Maryhill Girls</h1><span><i class="bi bi-c-circle"></i></span><p>2025.</p></div>
 </section>
 <script>
-    var navlink = document.getElementById("navlink");
- function showmenu(){
-    navlink.style.right = "0";
- }
- function hidemenu(){
-    navlink.style.right = "-200px";
- }
-</script>
+    var navlink= document. getElementById("navlink");
+    function showmenu(){
+        navlink.style.left = "0";
+    }
+    function hidemenu(){
+        navlink.style.left = "-200px";
+    }
+    </script>
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 <script>
     var typed = new Typed(".auto-type",{
