--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <img src="1and2/1.jpg">
                 </div>
                 <div class="slide">
-                    <img src="3and4/4.jpg" >
+                    <img src="new fold/DSC_1.jpg" >
                 </div>
                 <div class="slide">
                     <img src="1and2/2.jpg" >
