--- a/index.html
+++ b/index.html
@@ -57,6 +57,140 @@
             </div>
         </div>
     </section>
+         <section class="picture-slide">
+        <div class="pic-holder">
+
+<div class="picture-flow">
+    <img src="new fold/DSC_14.jpg">
+</div>
+
+<div class="picture-flow">
+    <img src="new fold/DSC_10.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_11.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_43.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_1.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_10.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_15.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_16.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_17.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_18.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_19.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_20.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_21.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_22.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_23.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_24.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_25.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_26.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_27.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_28.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_29.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_3.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_30.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_31.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_32.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_33.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_34.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_35.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_36.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_37.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_38.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_39.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_4.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_40.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_41.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_42.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_5.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_6.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_7.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_8.JPG">
+</div>
+<div class="picture-flow">
+    <img src="new fold/DSC_9.JPG">
+</div>
+
+
+
+
+</div>
+        
+    </section>
    
 <section class="location-items">
 <div class="row">
