--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="pic-holder">
 
 <div class="picture-flow">
-    <img src="new fold/DSC_14.jpg">
+    <img src="new fold/DSC_14.JPG">
 </div>
 
 <div class="picture-flow">
