--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <img src="new fold/DSC_11.JPG">
 </div>
 <div class="picture-flow">
-    <img src="new fold/DSC_43.JPG">
+    <img src="new fold/DSC_43.jpg">
 </div>
 <div class="picture-flow">
     <img src="new fold/DSC_1.JPG">
