--- a/index.html
+++ b/index.html
@@ -344,6 +344,24 @@
 </section>
     
 </section>
+            <section class="find-us">
+        <div class="row">
+            <div class="subsub-col">
+<form action="form handler.php" method="post">
+    <input type="text" name="name" placeholder="ENTER YOUR NAME" required>
+     <input type="text" name="email" placeholder="ENTER EMAIL ADDRESS" required>
+      <input type="text" name="subject" placeholder="ENTER YOUR SUBJECT" required>
+      <textarea rows="8" name="message" placeholder="MESSAGE" required ></textarea>
+      <button type="submit" class="button">send</button>
+</form>
+            </div>
+             <div class="subsubtwo-col">
+<h1>maryhill girls high school<br>providing equal education opportunities<br>
+     for the Kenyan girl child </h1>
+             </div>
+        </div>
+
+    </section>
 
 <section class="road-map">
     <div class="route"><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3989.200096969239!2d36.99057632404397!3d-1.008647435383771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sMaryhill%20Girls%20High%20School%20location%20google%20map%20!5e0!3m2!1ssw!2ske!4v1742542771874!5m2!1ssw!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
