--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <section class="find-us">
         <div class="row">
             <div class="subsub-col">
-<form action="form handler.php" method="post">
+<form action="form-handler.php" method="post">
     <input type="text" name="name" placeholder="ENTER YOUR NAME" required>
      <input type="text" name="email" placeholder="ENTER EMAIL ADDRESS" required>
       <input type="text" name="subject" placeholder="ENTER YOUR SUBJECT" required>
