--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h1>school mission</h1>
             <p>To provide equal educational opportunities for the kenyan girl child to develop
                 her full potential in a multicultural and competitive environment through discipline,moral 
-                and spiritual development and to faster skills in self reliance,leadership and resposibility
+                and spiritual development and to foster skills in self reliance,leadership and resposibility
             </p>
         </div>
     </div>
@@ -226,7 +226,7 @@
            
             <h2>MUSIC CLUB</h2>
             <P>Our music club is a vibrant community where students who love to sing, play and appreciate
-                music come together to share their passionn and create beautiful sounds.
+                music come together to share their passion and create beautiful sounds.
             </P>
             <img src="clubs/musicclub.JPG">
             <button>learn more</button>
